# tailparse

./: .gitignore  README.md  logparser.py  pyproject.toml  setup.py  test.sh
.github/workflows/: codecov.yml
tailparse/: __init__.py  cli.py  execute.py  logparser.py  print_output.py
tailparse/log_formats/: README.md  __init__.py  nginx.py
tailparse/tests/: README.md  test-nginx-logs.txt  test_nginx.py  test_print_output.py  test_regexp_format.py  test_smoke.py
tailparser/: cli.py  logparser.py
