[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tailparser"
version = "0.1"
authors = [
  { name="Vincent A Saulys", email="vincent@saulys.me" },
]
description = "Parser Nginx logs like SQL"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/valexandersaulys/logparser"
"Bug Tracker" = "https://github.com/valexandersaulys/logparser/issues"