[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tailparse"
version = "0.2"
authors = [
  { name="Vincent A Saulys", email="vincent@saulys.me" },
]
description = "Parser Nginx logs like SQL"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL License",
    "Operating System :: OS Independent",
]

[project.entry-points.console_scripts]
tailparse = "tailparse.cli:cli"

[project.urls]
"Homepage" = "https://github.com/valexandersaulys/tailparse"
"Bug Tracker" = "https://github.com/valexandersaulys/tailparse/issues"